--- a/src/app/repo/list.component.html
+++ b/src/app/repo/list.component.html
@@ -5,21 +5,20 @@
 
 <mat-card class="example-card" *ngIf="!isLoading">
   <div class="card-block">
-    <mat-list>
-      <h3 mat-subheader>Available ISBN ({{count}})</h3>
-      <mat-list-item *ngFor="let isbn of repos">
-        <mat-icon mat-list-icon>insert_drive_file</mat-icon>
-        <h4 mat-line>{{isbn.isbn}}</h4>
-        <button mat-raised-button color="primary" routerLink="/isbn/{{encodeURIComponent(isbn.name)}}">{{isbn.status}}</button>
-        <p mat-line> {{isbn.createdAt | date}} </p>
-      </mat-list-item>
-      <!-- <mat-divider></mat-divider>
-      <h3 mat-subheader>Notes</h3>
-      <mat-list-item *ngFor="let note of notes">
-        <mat-icon mat-list-icon>note</mat-icon>
-        <h4 mat-line>{{note.name}}</h4>
-        <p mat-line> {{note.updated | date}} </p>
-      </mat-list-item> -->
-    </mat-list>
+    <div>
+      <div style="display: block">
+        <canvas baseChart
+                [datasets]="barChartData"
+                [labels]="barChartLabels"
+                [options]="barChartOptions"
+                [legend]="barChartLegend"
+                [chartType]="barChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>
+      </div>
+      <button (click)="randomize()">Update</button>
+    </div>
   </div>
 </mat-card>
+
+
