--- a/src/app/repo/list.component.html
+++ b/src/app/repo/list.component.html
@@ -16,7 +16,7 @@
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)"></canvas>
       </div>
-      <button (click)="randomize()">Update</button>
+      <button (click)="print()">Print</button>
     </div>
   </div>
 </mat-card>
